# mfvs

./: CMakeLists.txt  README.md  flow.md  flowchart_obj_image_recog_track.md  flowchat.md  package.xml  readme.md
launch/: 2d_tracking.launch  2d_tracking_webcam.launch  align_obj_pointcloud.launch  align_pointcloud.launch  calibrate_mico_eye_in_hand.launch  capture_template.launch  cv_tracking.launch  open_realsense_cam.launch  pbvs.launch  pbvs_aruco_tag.launch  pbvs_on_ar_tag.launch  pointcloud_matching.launch  pointcloud_proc.launch  proc_pointcloud.launch  process_pointcloud.launch  realsense2_viewer.launch  remote_zed_cam_viz.launch  track.launch  track_2d_and_extract_pointcloud.launch  track_and_align_obj_pointcloud.launch  track_and_align_pointcloud.launch  track_and_crop.launch  track_and_extract.launch  track_and_extract_obj_pointcloud.launch  track_and_pbvs.launch  track_obj_pointcloud.launch  track_obj_pointcloud_from_image.launch  track_obj_rgb_python.launch  track_obj_rgb_webcam.launch  track_pointcloud.launch  visual_tracking.launch  vs_ar_tag_tracking.launch
msg/: BBox.msg  CartVelCmd.msg  Rect.msg
script/: crop_pointcloud.py  deplane.py
src/: 2d_tracking.cpp  align_obj_pointcloud.cpp  crop_cloud.cpp  cv_tracking.cpp  cv_tracking.py  extract_obj_pointcloud.cpp  obj_image_tracking.cpp  obj_image_tracking.py  obj_image_tracking_w_recognition.cpp  obj_pointcloud_alignment.cpp  obj_pointcloud_extraction.cpp  obj_pointcloud_segmentation.cpp  obj_pointcloud_template_save_to_pcd.cpp  obj_pointcloud_tracking.cpp  pbvs.cpp  pbvs_ar_tag.cpp  pointcloud_tracking_node.cpp  track_obj.py  track_obj_pointcloud.cpp  visual_tracking.cpp
srv/: SetObjPtCldTemplate.srv
visp_models/: 25mm_cube.cao  25mm_cube.init
